# cantina-app

./: .editorconfig  .gitattributes  Dockerfile  LICENSE  README.md  docker-compose.yml  docker.env  example.env  pyproject.toml  requirements.txt
cantina/: manage.py  scripts.py
cantina/apps/balcao/: admin.py  apps.py  models.py
cantina/apps/balcao/migrations/: 0001_initial.py
cantina/apps/caixa/: admin.py  apps.py  models.py  signals.py
cantina/apps/caixa/migrations/: 0001_initial.py
cantina/apps/clientes/: admin.py  apps.py  forms.py  models.py
cantina/apps/clientes/migrations/: 0001_initial.py  0002_alter_aluno_cpf_alter_responsavel_cpf.py
cantina/core/: asgi.py  settings.py  urls.py  wsgi.py
cantina/static/: staticfiles.json
